syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "unified.proto";
option go_package = "github.com/ops-cn/go-devops/proto/admin";
package admin;

service RoleMgr {
  // 查询数据
  rpc Query(RoleQueryReq) returns(unified.Response) {}
  // 查询指定数据
  rpc Get(RoleReq) returns(unified.Response) {}
  // 创建数据
  rpc Create(Role) returns(unified.Response) {}
  // 更新数据
  rpc Update(RoleReq) returns(unified.Response) {}
  // 删除数据
  rpc Delete(Role) returns(unified.Response) {}
  // 更新状态
  rpc UpdateStatus(Role) returns(unified.Response) {}
}

message Role {
  string ID = 1;
  string Name = 2;
  int32 Sequence = 3;
  string Memo = 4;
  int32 Status = 5;
  string Creator = 6;
  // @inject_tag: valid:"created_at"
  google.protobuf.Timestamp CreatedAt = 7;
  // @inject_tag: valid:"updated_at"
  google.protobuf.Timestamp UpdatedAt = 8;
}

message RoleQueryParam {
  repeated string ID = 1;
  string Name = 2;
  string QueryValue = 3;
  string UserID = 4;
  int32  Status = 5;
}
message RoleQueryReq {
  RoleQueryParam RoleQueryParam = 1;
  RoleQueryOptions RoleQueryOptions = 2;
}
message RoleReq {
  string CurrentID = 1;
  Role Role = 2;
  RoleQueryOptions RoleQueryOptions = 3;
}

message RoleQueryOptions {
  repeated unified.OrderField OrderField = 1;
}

message RoleQueryResult {
  repeated Role Data = 1;
  unified.PaginationResult PageResult = 2;
}